--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,4 +26,6 @@ hystrix:
 security:
   oauth2:
     resource:
-      user-info-uri: http://localhost:8088/user
+      service-id: my-card-auth
+      user-info-uri: http://${security.oauth2.resource.service-id}/user
+      loadBalanced: true
