--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-#      ddl-auto: create
+      ddl-auto: create
     open-in-view: false
   cloud:
     loadbalancer:
@@ -17,13 +17,7 @@ spring:
     host: localhost
     port: 6379
     timeout: 2000
-    password: redispass
-    lettuce:
-      pool:
-        max-active: 50
-        max-idle: 50
-        max-wait: 50ms
-        min-idle: 0
+    password: redis-cards-pwd
 
 server:
   port: 8080
